--- a/charts/vault-helm/.github/actions/setup-test-tools/action.yaml
+++ b/charts/vault-helm/.github/actions/setup-test-tools/action.yaml
@@ -9,10 +9,10 @@ runs:
     - uses: actions/setup-node@5e21ff4d9bc1a8cf6de233a3057d20ec6b3fb69d # v3.8.1
       with:
         node-version: '16'
-    - run: npm install -g bats@${BATS_VERSION}
+    - run: sudo npm install -g bats@${BATS_VERSION}
       shell: bash
       env:
-        BATS_VERSION: '1.8.2'
+        BATS_VERSION: '1.11.0'
     - run: bats -v
       shell: bash
     - uses: actions/setup-python@65d7f2d534ac1bc67fcd62888c5f4f3d2cb2b236 # v4.7.1
